# cr-connect-workflow

./: .gitignore  .sonarcloud.properties  .tool-versions  .travis.yml  Dockerfile  LICENSE.md  Pipfile  README.md  api.yml  crconnect.wsgi  deploy.sh  docker_push.sh  docker_run.sh  example_data.py  fact_runner.py  manage.py  package-lock.json  pyproject.toml  run.py  setup.cfg  setup.py  wsgi.py
.github/workflows/: build-test-image.yml  build_image_from_dev.yml  create-docker-action.yml
api/: __init__.py  workflow_tasks.py  workflows.py  workflows_tasks.py
app/: __init__.py  api.yml  flows.py  models.py  tests.py  views.py
app/api/: workflows_tasks.py
app/bpmn/: bpmn_xml_import.py
app/camunda/: CamundaParser.py  WorkflowRunner.py
app/command_line/: joke.py
app/migrations/: 0001_initial.py  0002_crconnectprocess_description.py  0003_auto_20191118_1624.py
app/model/: Fact.py  NuclearStrikeWorkflowSpec.py  WorkflowRunner.py
app/scripts/: FactService.py
app/static/: diagram.bpmn
config/: default.py  logging.py  logging_example.py  testing.py  travis-testing.py
config/IMPORT_TEST/: categories.json
cr_connect_workflow/: settings.py  urls.py  wsgi.py
crc/: __init__.py  api.py  api.yml  api_v2.yml  models.py  protocol_builder.yml  workflow_processor.py
crc/api/: file.py  (+16 more)
deploy/: requirements.txt  update_requirements.sh
docs/: conf.py  index.rst  protocol_builder.html
postgres/: connect.sh  docker-compose.yml  docker-windows-compose.yml  package-lock.json  start.sh  stop.sh
templates/: load_bpmn.html
tests/: BaseTest.py  TestWorkflow.py  base_test.py  test_api.py  test_api_files.py  test_approvals.py  test_approvals_api.py  test_approvals_service.py  test_authentication.py  test_auto_set_primary_bpmn.py  test_complete_template_script.py  test_data_store_service.py  test_datastore_api.py  test_decision_table_dictionary_output.py  test_dmn_from_spreadsheet.py  test_document_directories.py  test_email_script.py  test_email_service.py  test_events.py  test_file_datastore.py  test_file_service.py  test_files_api.py  test_files_from_filesystem.py  test_files_to_filesystem.py  test_get_dashboard_url_script.py  test_git_service.py  test_irb_info_script.py  test_is_file_uploaded_script.py  test_jinja_service.py  test_lane_permissions.py  test_launch_workflow_outside_study.py  test_ldap_service.py  test_lookup_service.py  test_looping_task.py  test_mails.py  test_message_event.py  test_multi_instance_tasks_api.py  test_process_erroring_workflows.py  test_process_failing_workflows.py  test_protocol_builder.py  (+27 more)
workflows/: workflows.py
(+720 files in other folders)
