[tool.poetry]
name = "cr-connect-workflow"
version = "0.1.0"
description = ""
authors = ["jasquat <jasquat@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
alembic = "*"
coverage = "*"
docxtpl = "*"
flask = "*"
celery = "<6"
flask-admin = "*"
flask-bcrypt = "*"
flask-cors = "*"
flask-mail = "*"
flask-marshmallow = "*"
flask-migrate = "*"
flask-restful = "*"
gunicorn = "*"
httpretty = "*"
ldap3 = "*"
lxml = "*"
markdown = "*"
marshmallow = "*"
marshmallow-enum = "*"
marshmallow-sqlalchemy = "*"
openpyxl = "*"
pandas = "*"
psycopg2-binary = "*"
pyjwt = "*"
python-dateutil = "*"
recommonmark = "*"
requests = "*"
sphinx = "*"
swagger-ui-bundle = "*"
webtest = "*"
werkzeug = "*"
xlrd = "*"
xlsxwriter = "*"
pygithub = "*"
gitpython = "*"
apscheduler = "*"
connexion = {extras = [ "swagger-ui",], version = "*"}
sentry-sdk = {extras = [ "flask",], version = "==0.14.4"}
dateparser = "*"
# TIP:  If you want to test local changes to SpiffWorkflow, do:
# pipenv install --editable ../SpiffWorkflow (but fix things back before commiting!)
spiffworkflow = {git = "https://github.com/sartography/SpiffWorkflow"}

[tool.poetry.dev-dependencies]
pytest = "*"
pbr = "*"
coverage = "*"


[tool.pdm]
includes = []
[tool.pdm.dev-dependencies]
dev = [
    "pytest",
    "pbr",
    "coverage",
]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"


[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
authors = [
    {name = "jasquat", email = "jasquat@users.noreply.github.com"},
]
requires-python = ">=3.9,<4.0"
dependencies = [
    "alembic",
    "coverage",
    "docxtpl",
    "flask",
    "celery<6",
    "flask-admin",
    "flask-bcrypt",
    "flask-cors",
    "flask-mail",
    "flask-marshmallow",
    "flask-migrate",
    "flask-restful",
    "gunicorn",
    "httpretty",
    "ldap3",
    "lxml",
    "markdown",
    "marshmallow",
    "marshmallow-enum",
    "marshmallow-sqlalchemy",
    "openpyxl",
    "pandas",
    "psycopg2-binary",
    "pyjwt",
    "python-dateutil",
    "recommonmark",
    "requests",
    "sphinx",
    "swagger-ui-bundle",
    "webtest",
    "werkzeug",
    "xlrd",
    "xlsxwriter",
    "pygithub",
    "gitpython",
    "apscheduler",
    "connexion[swagger-ui]None",
    "sentry-sdk[flask]==0.14.4",
    "dateparser",
    "spiffworkflow @ git+https://github.com/sartography/SpiffWorkflow",
]
name = "cr-connect-workflow"
version = "0.1.0"
description = ""

[project.urls]
